--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@ body {
 
 header {
 	text-align: center;
-	border: 3px solid white;
+	border: 2px solid white;
+	border-radius: 4px;
 }
+
 
 a {
 	color: #5555ff;
