--- a/style.css
+++ b/style.css
@@ -1,30 +1,31 @@
+ @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
 body {
-	font-family: "メイリオ";
-	background: #faf8e1;
+	background: white;
 	color: black;
+	font-family: 'Noto Sans JP', sans-serif;
 }
 
-header {
-	text-align: center;
-	border: 2px solid black;
-	border-radius: 10px;
-	margin: auto;
-	width: 30em;
-}
-
-h1 {
+.header {
 	text-align: center;
 }
 
-img:not(.banner){
+.title {
+	color: inherit;
+	text-decoration: none;
+	font-size: 40px;
+}
+
+.pages {
+	display: flex;
+	gap: 4px 4px;
+	justify-content: center;
+}
+
+.main h1 {
+	text-align: center;
+}
+
+.main > img {
 	display: block;
-	margin: auto;
-}
-
-a {
-	color: #5555ff;
-}
-
-.banner {
-	margin: 1em;
+  margin: auto;
 }
